package bot.api;

/**
 * Interfaz para manejar eventos del bot.
 */
public interface EventHandler {
    // Métodos futuros
}